--- a/lab7/css/lab.css
+++ b/lab7/css/lab.css
@@ -1,5 +1,6 @@
 body{
-   background-image: url("https://i.imgur.com/4LVQUyc.jpg");
+   background-image: url("https://i.imgur.com/dTn1fDa.jpg");
+
 }
 p {
    text-align: center
