--- a/css/lab.css
+++ b/css/lab.css
@@ -4,18 +4,21 @@ body{
 
 }
 img {
-  float: left;
-  margin: 20px;
+  float: right;
+  margin: 50px;
   max-width: 300px;
 	width: 100%;
 
+}
 
-
+body {
+    font-family: 'Oleo Script Swash Caps', cursive;
 
 
 }
 p {
-   text-align: center
+   text-align: left
+
 }
 #ourParagraph {
    border-style: solid;
@@ -42,24 +45,25 @@ nav {
 element.style {
 }
 h1 {
-    text-transform: uppercase;
-    letter-spacing: 0.5em;
     word-spacing: 0.5em;
-    font-family: century gothic;
-    padding-bottom: 0;
-    margin-bottom: 0.25em;
+    font-family: Oleo Script Swash Caps;
     color:#343483;
+    font-size: 2.6em;
 
 }
 h2 {
-    text-transform: uppercase;
-    letter-spacing: 0.8em;
+    text-transform: lowercase;
     word-spacing: 0.8em;
-    font-family: century gothic;
-    padding-bottom: 0;
-    margin-bottom: 0.25em;
+    font-family: Oleo Script Swash Caps;
     color:#1533c3;
+    font-size: 3em;
 
+}
+p {
+        text-transform: lowercase;
+        word-spacing: 0.8em;
+        font-family: times new roman;
+        color:#090b18;
 
 
 }
