--- a/lab132/css/lab.css
+++ b/lab132/css/lab.css
@@ -1,40 +1,16 @@
-iframe#fake {
-    width: 800px;
-    height: 500px;
-    resize: both;
-    overflow: hidden;
-
-}
-
-body{
-   background-image: url("../img/back.jpg");
-   background-size: cover;
-
-
-}
-#helpme {
-color: #ffffff;
-
 }
 #container {
 position: relative;
 width: 100vw;
 height: 100vh;
-z-index: -100;
-line-height: 95%;
-border: 5px solid white;
-margin:20px;
-
-
-
+background-image: url("../img/back.jpg");
+background-size: cover;
+margin:100px;
 
 
 }
 #right {
 text-align: right;
-position: absolute;
-bottom: -10;
-right: 0;
 color: #e4003f;
 text-align: right;
 font-family: 'Suez One', serif;
@@ -42,7 +18,6 @@ border-bottom:5px dashed #e4003f;
 line-height: 25%;
 text-shadow: 2px 2px #000;
 word-spacing: 10px;
-
 
 }
 #des2 {
@@ -62,31 +37,29 @@ letter-spacing: 1px;
 #title-box2 {
 color: #ff3452;
 
-}
-#des4 {
-text-align: center;
 
 }
 #title-box {
 position: absolute;
 top: 0;
-left: 0;
+left: 50%;
+transform: translatex(50%);
 width: 100%;
 z-index: -10;
 font-family: 'Josefin Slab', serif;
 color: #e8dfc0;
-font-size: 44px;
+font-size: 20px;
 word-break: break-word;
 line-height: 65%;
 text-decoration: none;
-
+margin: 10px;
 
 
 
 
 }
 #title-box .title {
-font-size: 150px;
+font-size: 135px;
 letter-spacing: -10px;
 font-family: 'Suez One', serif;
 line-height: 65%;
@@ -102,11 +75,14 @@ text-align: center;
 
 }
 #caption-box {
+left: 50%;
+transform: translatex(50%);
 text-align: right;
 z-index: 10;
 font-size: 30px;
 word-spacing: 20px;
   text-decoration: none;
+  margin:10px
 
 
 
