--- a/lab13/css/lab.css
+++ b/lab13/css/lab.css
@@ -63,7 +63,10 @@ color: #ff3452;
 
 }
 #des4 {
-text-align: center;
+margin-left: 17%;
+text-decoration: none;
+word-spacing:5px;
+line-height:50px
 
 }
 #title-box {
