--- a/lab14/css/lab.css
+++ b/lab14/css/lab.css
@@ -25,10 +25,17 @@ text-align: left;
 #OOO {
 font-size: 80px;
 font-family: "proxima-nova", sans-serif;
-border-collapse: collapse;
+border-collapse: separate;
 text-align: center;
 color: #ffd7a8;
 }
+
+#space {
+font-size: 230px;
+
+}
+
+
 
 
 .center {
@@ -42,6 +49,16 @@ text-align:center;
 font-family: "proxima-nova", sans-serif;
 line height: 3.5em;
 padding-bottom: 20px;
+
+}
+
+
+#end {
+text-align:center;
+font-family: "proxima-nova", sans-serif;
+line height: 3.5em;
+padding-top: 80px;
+font style: bold;
 
 }
 
