--- a/lab14/css/lab.css
+++ b/lab14/css/lab.css
@@ -9,11 +9,12 @@ width: 100vw;
 height: 100vh;
 font-family: "proxima-nova", sans-serif;
 color: #000;
+line height: -500px;
+
 
 
 }
 #spotify {
-
 position: absolute;
 top: 0;
 left: 0;
@@ -21,10 +22,12 @@ text-align: left;
 
 
 
+
 }
 #OOO {
 font-size: 80px;
 font-family: "proxima-nova", sans-serif;
+word-spacing: -5px;
 border-collapse: separate;
 text-align: center;
 color: #ffd7a8;
@@ -32,6 +35,7 @@ color: #ffd7a8;
 
 #space {
 font-size: 230px;
+word-spacing: -20px;
 
 }
 
@@ -58,7 +62,7 @@ text-align:center;
 font-family: "proxima-nova", sans-serif;
 line height: 3.5em;
 padding-top: 80px;
-font style: bold;
+
 
 }
 
