--- a/lab14/css/lab.css
+++ b/lab14/css/lab.css
@@ -29,7 +29,7 @@ font-family: "proxima-nova", sans-serif;
 word-spacing: -5px;
 border-collapse: separate;
 text-align: center;
-color: #ffd7a8;
+color: #fcc8ba;
 }
 
 #space {
