--- a/Lab15/css/lab.css
+++ b/Lab15/css/lab.css
@@ -18,6 +18,7 @@ font-family: "proxima-nova", sans-serif;
 color: #664a34;
 word-spacing: 5px;
 line-height:130%;
+font-size:17px;
 }
 h1, h2 {
 word-spacing: 10px;
