--- a/css/lab.css
+++ b/css/lab.css
@@ -34,7 +34,7 @@ element.style {
     border-bottom: dashed 20px #404495;
     border-left: double 40px #1634c9;
     border-right: double 40px #1634c9;
-    border-radius: 5px;
+    border-radius: 0 50px;
     background-color: rgba(166, 166, 255, 0.8);
 }
 
@@ -49,6 +49,7 @@ h1 {
     font-family: Oleo Script Swash Caps;
     color:#343483;
     font-size: 2.6em;
+    text-shadow: 0 0 5px #213ae6;
 
 }
 h2 {
@@ -57,6 +58,7 @@ h2 {
     font-family: Oleo Script Swash Caps;
     color:#1533c3;
     font-size: 3em;
+    text-shadow: 0 0 5px #213ae6;
 
 }
 p {
@@ -64,6 +66,17 @@ p {
         word-spacing: 0.8em;
         font-family: times new roman;
         color:#090b18;
+
+    }
+      img {
+      width:auto;
+      height:auto;
+      object-fit: cover;
+      filter: blur(0px);
+}
+img:hover {
+filter: blur(5px);
+}
 
 
 }
