--- a/css/lab.css
+++ b/css/lab.css
@@ -28,8 +28,8 @@ p {
 element.style {
 }
 .major-section {
-    margin: 50px;
-    padding: 10px;
+    display: inline-block;
+    width: 60%;
     border-top: dashed 20px #404495;
     border-bottom: dashed 20px #404495;
     border-left: double 40px #1634c9;
@@ -77,6 +77,11 @@ p {
 img:hover {
 filter: blur(5px);
 }
-
+#sidebar {
+  float: right;
+  margin: 20px;
+  width: 300px;
+  border: double 15px #492912;
+  background-color: #b1ded7;
 
 }
