--- a/css/lab.css
+++ b/css/lab.css
@@ -81,7 +81,11 @@ filter: blur(5px);
   float: right;
   margin: 20px;
   width: 300px;
-  border: double 15px #492912;
-  background-color: #b1ded7;
+  border-top: dashed 20px #404495;
+  border-bottom: dashed 20px #404495;
+  border-left: double 40px #1634c9;
+  border-right: double 40px #1634c9;
+  border-radius: 0 50px;
+  background-color: rgba(166, 166, 255, 0.8);
 
 }
