--- a/css/lab.css
+++ b/css/lab.css
@@ -13,11 +13,14 @@ img {
 
 body {
     font-family: 'Oleo Script Swash Caps', cursive;
+       text-decoration: none;
 
 
 }
 p {
-   text-align: left
+   text-align: left;
+   text-decoration: none;
+
 
 }
 #ourParagraph {
@@ -30,12 +33,12 @@ element.style {
 .major-section {
     display: inline-block;
     width: 60%;
-    border-top: dashed 20px #404495;
-    border-bottom: dashed 20px #404495;
-    border-left: double 40px #1634c9;
-    border-right: double 40px #1634c9;
+    border-top: double 20px #404495;
+    border-bottom: double 20px #404495;
+    border-left: dotted 20px #1634c9;
+    border-right: dotted 20px #1634c9;
     border-radius: 0 50px;
-    background-color: rgba(166, 166, 255, 0.8);
+    background-color: rgba(166, 166, 255, 0.5);
 }
 
 nav {
@@ -50,6 +53,8 @@ h1 {
     color:#343483;
     font-size: 2.6em;
     text-shadow: 0 0 5px #213ae6;
+    text-align:center;
+
 
 }
 h2 {
@@ -59,13 +64,16 @@ h2 {
     color:#1533c3;
     font-size: 3em;
     text-shadow: 0 0 5px #213ae6;
+    text-align: center;
+
 
 }
 p {
-        text-transform: lowercase;
-        word-spacing: 0.8em;
-        font-family: times new roman;
-        color:#090b18;
+text-transform: lowercase;
+word-spacing: 0.8em;
+font-family: "times new roman";
+color:#090b18;
+
 
     }
       img {
@@ -81,11 +89,11 @@ filter: blur(5px);
   float: right;
   margin: 20px;
   width: 300px;
-  border-top: dashed 20px #404495;
-  border-bottom: dashed 20px #404495;
-  border-left: double 40px #1634c9;
-  border-right: double 40px #1634c9;
+  border-top: dotted 25px #404495;
+  border-bottom: dotted 25px #404495;
+  border-left: dotted 20px #1634c9;
+  border-right: dotted 20px #1634c9;
   border-radius: 0 50px;
-  background-color: rgba(166, 166, 255, 0.8);
+  background-color: rgba(166, 166, 255, 0.5);
 
 }
