--- a/lab17.2/css/index.css
+++ b/lab17.2/css/index.css
@@ -7,6 +7,44 @@ body {
 margin: 0;
 }
 
+
+{
+  box-sizing: border-box;
+}
+h1, h2 {
+  text-decoration: underline overline wavy #b1ded7;
+  font-family: century gothic;
+  display: block;
+  text-transform: lowercase;
+  font-size: 2.6em;
+  text-shadow: 0 0 2px #fff;
+  font-weight: bold;
+  letter-spacing: 0.01em;
+  word-spacing: 0.1em;
+  color: #b578a9
+}
+.box {
+  float: left;
+  width: 50%;
+  padding: 50px;
+  height: 300px;
+  background-color:#c6e6df;
+}
+
+.box2 {
+background-color:#f8ccde;
+  float: right;
+ width: 50%;
+ padding: 50px;
+ height: 300px;
+}
+
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
 ul {
 list-style-type: none;
 margin: 0;
@@ -42,8 +80,9 @@ height:1000px;
 background color: white;
 }
 
+
 aside {
-  width: 100px%;
+  width: 200px;
   padding-left: 15px;
   margin-left: 15px;
   float: right;
@@ -52,5 +91,5 @@ aside {
 }
 
 img {
-width: 100px;
+width: 200px;
 }
