--- a/lab17.2/css/flexbox.css
+++ b/lab17.2/css/flexbox.css
@@ -11,6 +11,19 @@ html, body {
   text-align: center;
 }
 
+h1, h2 {
+  text-decoration: underline overline wavy #b1ded7;
+  font-family: century gothic;
+  display: block;
+  text-transform: lowercase;
+  font-size: 2.6em;
+  text-shadow: 0 0 2px #fff;
+  font-weight: bold;
+  letter-spacing: 0.01em;
+  word-spacing: 0.1em;
+  color: #b578a9
+}
+
 {
   box-sizing: border-box;
 }
