--- a/lab17.2/css/flexbox.css
+++ b/lab17.2/css/flexbox.css
@@ -7,7 +7,7 @@ html, body {
   display: inline-block;
   margin: 20px;
   padding: 10px;
-  background-color: #f6f6f6;
+  background-color:rgba(255,0,255,0.3);
   text-align: center;
 }
 
