--- a/lab18/css/lab.css
+++ b/lab18/css/lab.css
@@ -76,26 +76,12 @@ font-size: 12px;
      }
 
 
-  @media screen and (max-width:600px) {
-    .header{width: 100%;}
-    .main {width: 33.33%;}
-    .div {width: 33.33}
+    @media screen and (max-width:800px) {
+  .flex-container > div {
+     width:100%;
+     min-width:100%;
+     max-width:100%;
+     background-color:black;
+     color:white;
 
-  }
-    .left , .main, .right {
-      width:100%;
-      .left, .right {
-        float: left;
-        width: 20%;
-  }
-  .main {
-    float: left;
-    width: 60%;
-  }
-  . img {
-    max-width: 100%;
-    height: auto;
-  }
-
-    }
-  }
+   }
